--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # User config
-author: "Li Yuchen  ╮(๑•́ ₃•̀๑)╭"
+author: "Peng Manshu  ( ´◔︎ ‸◔︎`) "
 tagline: "Pineapple Certfied Jekyll Theme"
-description: "LYC is testing his github.io..."
+description: "PMS is testing her github.io..."
 # keywords: "Pineapple, Pineapple Pizza, Pineapple House"
 email: "yuchener.li@outlook.com"
 linkedin: "https://www.linkedin.com/"
