--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # User config
-author: "Peng Manshu  ( ´◔︎ ‸◔︎`) "
+author: "Peng Manshu  ( ´◔︎ ‸◔︎`) ~"
 tagline: "Pineapple Certfied Jekyll Theme"
 description: "PMS is testing her github.io..."
-# keywords: "Pineapple, Pineapple Pizza, Pineapple House"
-email: "yuchener.li@outlook.com"
+keywords: "Pineapple, Pineapple Pizza, Pineapple House"
+email: "manshu.peng@outlook.com"
 linkedin: "https://www.linkedin.com/"
 twitter: "https://twitter.com/"
 github: "https://github.com/"
