--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # User config
 author: "Peng Manshu  ( ´◔︎ ‸◔︎`) ~"
 tagline: "Pineapple Certfied Jekyll Theme"
-description: "PMS is testing her github.io..."
+description: "PMS is a cute pig testing her github.io..."
 keywords: "Pineapple, Pineapple Pizza, Pineapple House"
 email: "manshu.peng@outlook.com"
 linkedin: "https://www.linkedin.com/"
